<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_aplikasi_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aplikasi_perhitungan_gaji"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/tv_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_data_user"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/nama_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_nama_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status" />

        <CheckBox
            android:id="@+id/cb_menikah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menikah"
            app:useMaterialThemeColors="true" />

        <TextView
            android:id="@+id/tv_golongan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/golongan" />

        <RadioGroup
            android:id="@+id/rg_golongan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_button_1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_golongan_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:text="@string/golongan_1"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rb_golongan_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/golongan_2" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_hitung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="65dp"
            android:text="@string/hitung"/>

        <TextView
            android:id="@+id/tv_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasil_perhitungan"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:layout_marginTop="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/nama_user" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_nama_userr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/status" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_hasil_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/golongan" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_hasil_golongan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:prefixText="Rp."
            android:hint="@string/gaji_bersih_rp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_hasil_gaji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>
